updated the game logic to now allow an api to make a turn, have also fixed the game logic not detecting a win if the middle square was the last one selected.

--- a/game/index.html
+++ b/game/index.html
@@ -5,6 +5,10 @@
     </head>
 
     <body>
+        <label class="switch">
+            <p>Play Against the AI?</p>
+            <input id= "play_ai" type="checkbox">
+        </label>
         <table>
             <tr>
                 <td><button id="game_buttons" onclick="naughts_and_crosses.call(this)" value="0,0">Click</button></td>
